--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -1,8 +1,7 @@
-/* .userPhoto {
+.userPhoto {
     width: 50px;
     border-radius: 30px;
-} */
-.userPhoto {
-    width: 100px;
-   height: 100px;
+} 
+.selectedPage {
+    font-weight: bold;
 }
